Fixed issue #601 which was not showing the text properly

--- a/src/components/BookList/BookList.css
+++ b/src/components/BookList/BookList.css
@@ -64,7 +64,7 @@ form {
   font-weight: 500;
   font-size: 16px;
   transition: 0.8s;
-
+  color: black;
 }
 
 
